simplify of methods generateBasicQuestions and generateSpecialQuestions using Map, there was too many unnecessary lists